--- a/如何修改需要权限的注册表项值.md
+++ b/如何修改需要权限的注册表项值.md
@@ -84,3 +84,4 @@ int main()
 
 ## Reference
 
+[Registry Key Security and Access Rights](https://learn.microsoft.com/en-us/windows/win32/sysinfo/registry-key-security-and-access-rights)
